--- a/src/app/app-inside/dashboard/dashboard.component.css
+++ b/src/app/app-inside/dashboard/dashboard.component.css
@@ -1,16 +1,26 @@
-
 mat-drawer-container  {
-    height: 90vh;
+    height: auto;
 }
 
 .setting-button{ 
     margin: 10px;
-    margin-top: 80vh;
+    bottom: 2%;
+    right: 2%;
+    z-index: 999;
+    position: fixed !important;
 }
-
 
 mat-drawer{
     padding-right: 3%;
     padding-left: 3%;
     padding-top: 4%;  
+    background-color: #3f51b5 !important;
+}
+
+button.sidenav-button{
+    margin-bottom: 3px !important;
+}
+
+.sidenav-span {
+    color: white;
 }
